# slowbowser

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  shell.nix
3rdparties/macos/sdl/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config.h.cmake  SDL_config.h.in  SDL_config_android.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_os2.h  SDL_config_pandora.h  SDL_config_psp.h  SDL_config_windows.h  SDL_config_winrt.h  SDL_config_wiz.h  SDL_copying.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  (+44 more)
src/: CMakeLists.txt
src/common/: types.h
window/src/: CMakeLists.txt  sb_window.c  sb_window.h
window/test/: CMakeLists.txt  main.c
